# congenial-disco

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: BuildAndTest.yml
doc/html/: already__exist_8h_source.html  annotated.html  bad__input_8h_source.html  classdisco_1_1already__exist-members.html  classdisco_1_1already__exist.html  classdisco_1_1bad__input-members.html  classdisco_1_1bad__input.html  classdisco_1_1completer-members.html  classdisco_1_1completer.html  classdisco_1_1completer__impl-members.html  classdisco_1_1completer__impl.html  classdisco_1_1exception-members.html  classdisco_1_1exception.html  classdisco_1_1function-members.html  classdisco_1_1function.html  classdisco_1_1function__factory-members.html  classdisco_1_1function__factory.html  classdisco_1_1function__impl-members.html  classdisco_1_1function__impl.html  classdisco_1_1function__proxy-members.html  classdisco_1_1function__proxy.html  classdisco_1_1function__proxy__impl-members.html  classdisco_1_1function__proxy__impl.html  classdisco_1_1invoker-members.html  classdisco_1_1invoker.html  classdisco_1_1not__exist-members.html  classdisco_1_1not__exist.html  classdisco_1_1signature__builder-members.html  classdisco_1_1signature__builder.html  classdisco_1_1storage-members.html  classdisco_1_1storage.html  classdisco_1_1string__command__executor-members.html  classdisco_1_1string__command__executor.html  classdisco_1_1variable-members.html  classdisco_1_1variable.html  classdisco_1_1variable__impl-members.html  classdisco_1_1variable__impl.html  classdisco_1_1variable__proxy-members.html  classdisco_1_1variable__proxy.html  classdisco_1_1variable__proxy__impl-members.html  (+83 more)
doc/latex/: already__exist_8h_source.tex  annotated.tex  bad__input_8h_source.tex  classdisco_1_1already__exist.eps  classdisco_1_1already__exist.tex  classdisco_1_1bad__input.eps  classdisco_1_1bad__input.tex  classdisco_1_1completer.eps  classdisco_1_1completer.tex  classdisco_1_1completer__impl.eps  classdisco_1_1completer__impl.tex  classdisco_1_1exception.eps  classdisco_1_1exception.tex  classdisco_1_1function.eps  classdisco_1_1function.tex  classdisco_1_1function__factory.tex  classdisco_1_1function__impl.eps  classdisco_1_1function__impl.tex  classdisco_1_1function__proxy.eps  classdisco_1_1function__proxy.tex  classdisco_1_1function__proxy__impl.eps  classdisco_1_1function__proxy__impl.tex  classdisco_1_1invoker.eps  classdisco_1_1invoker.tex  classdisco_1_1not__exist.eps  classdisco_1_1not__exist.tex  classdisco_1_1signature__builder.tex  classdisco_1_1storage.eps  classdisco_1_1storage.tex  (+76 more)
ext/: hope.cmake
lib/: CMakeLists.txt
lib/consolelib/: completer.h  completer_impl.cpp  completer_impl.h  completer_impl.hpp  disco.h  exception.h  function.h  invoker.cpp  invoker.h  lambda_function.h  name_completer.cpp  name_completer.h  parser.h  storage.h  string_command_executor.cpp  string_command_executor.h  string_command_executor.hpp  string_invoker.cpp  string_invoker.h
lib/consolelib/common/: foundation.h
lib/consolelib/core/: for_each.h  function_traits.h  typelist.h
lib/consolelib/exception/: already_exist.cpp  already_exist.h  bad_input.cpp  bad_input.h  exception.cpp  exception.h  not_exist.cpp  not_exist.h
lib/consolelib/function/: fuinction_proxy.h  function.h  function_factory.h  function_impl.h  function_proxy.h  function_proxy_impl.cpp  function_proxy_impl.h  function_proxy_impl.hpp  lambda_function.h
lib/consolelib/generator/: generator.h  parser.h  signature_builder.cpp  signature_builder.h  signature_builder.hpp
lib/consolelib/variable/: variable.h  variable_impl.h  variable_instance.h  variable_proxy.h  variable_proxy_impl.cpp  variable_proxy_impl.h  variable_proxy_impl.hpp
samples/small-bind/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  completer.cpp  executor_test.h  function_call.cpp  insertation.cpp  parser_test.cpp  signature.cpp  variable_change.cpp
(+40 files in other folders)
